# kaleidoscope-algo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  compose.yml  create_many.sh  garage.toml  kaleido.blend  loader.py  run_macos.sh  run_macos_textured.sh  s3_env  tarascopes-new.sql  tarascopes.sql  tarascopes_v2.sql
api/: deno.json  index.html  main.ts
api-rs/: Cargo.toml  index.hbs  index.html
api-rs/src/: main.rs
daemon/: Cargo.toml
daemon/src/: api.rs  database.rs  lib.rs  publisher.rs  queue.rs  ranking.rs
nannou-exp/: Cargo.toml  build.rs
nannou-exp/src/: main.rs
nannou-exp/src/shaders/: fs.wgsl  vs.wgsl
nannou-exp/src/wesl/: main.wgsl
publisher/: Cargo.toml
publisher/src/: database.rs  main.rs
rank/: __main__.py  rank.py
scripts/: create_many.sh  create_many_container.sh  rank_available.sh  run.sh  run_container.sh  run_macos.sh  run_macos_textured.sh  run_store_nfs.sh  run_store_nfs_many.sh  tarascope-server.service
src/: cli.rs  encoder.rs  lib.rs  main.rs
src/shader/: gabor.rs  magic.rs  mod.rs  noise.rs  unoise.rs  voronoi.rs  wave.rs
tarascope/: .gitignore  Cargo.toml  Dockerfile  loader.py  requirements.txt
tarascope/scripts/: run.sh  run_store_nfs_many.sh
tarascope/src/: encoder.rs  exec.rs  lib.rs  render.rs.bak
tarascope/src/shader/: gabor.rs  magic.rs  mod.rs  noise.rs  unoise.rs  voronoi.rs  wave.rs
