[package]
name = "api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
daemon = { path = "../daemon" }
tarascope = { path = "../tarascope" }
sqlx = { version = "0.8", features = ["json", "postgres", "runtime-tokio"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
